--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8100
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cat-adopt?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=1z2x3c4v
+spring.datasource.password=root
 
 #??mapper??????
 mybatis-plus.mapper-locations=classpath:mapper/*.xml
